really fixed font size on mobiles

--- a/css/common.css
+++ b/css/common.css
@@ -27,3 +27,10 @@ body {
 body, html {
 	height:				100%;
 }
+
+/* Smartphones */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+	font:				2.5em;
+}
