--- a/min/common.css
+++ b/min/common.css
@@ -1,1 +1,1 @@
-a[href^="http"]{text-decoration:none;color:#f5f5f5;transition:.1s ease}a:hover[href^="http"]{background:rgba(75,97,87,0.2);transition:.1s ease}::selection{background:rgba(75,97,87,0.2)}::-moz-selection{background:rgba(75,97,87,0.2)}body{font:1.5em 'Georgia',serif;line-height:150%;letter-spacing:.2px;background:#9acab6}body,html{height:100%}
+a[href^="http"]{text-decoration:none;color:#f5f5f5;transition:.1s ease}a:hover[href^="http"]{background:rgba(75,97,87,0.2);transition:.1s ease}::selection{background:rgba(75,97,87,0.2)}::-moz-selection{background:rgba(75,97,87,0.2)}body{font:1.5em 'Georgia',serif;line-height:150%;letter-spacing:.2px;background:#9acab6}body,html{height:100%}@media only screen and (min-device-width :320px) and (max-device-width :480px){font:2.5em}
